--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
